Alignment correction

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -24,14 +24,21 @@
 		@apply bg-zinc-200 text-zinc-900 border-zinc-200 dark:bg-zinc-900 dark:text-zinc-50 dark:border-zinc-800;
 	}
 	.nav-item {
-		@apply relative block px-3 py-2 transition uppercase font-medium tracking-wider hover:text-ctp-mauve/60 text-ctp-mauve/90 drop-shadow;
+		@apply relative block px-3 py-2 transition uppercase font-medium tracking-wider hover:text-zinc-100 text-zinc-50 drop-shadow;
 	}
 	.nav-item--active {
-		@apply font-bold tracking-wider text-ctp-mauve;
+		@apply font-bold tracking-wider text-zinc-50 ;
 	}
 }
 
 @tailwind utilities;
+
+:root {
+	--primary-color:  hsl(115, 54%, 76%);
+	--secondary-color: rgb(116, 199, 236);
+	--color-base-green: 158, 79%
+  }
+
 
 /* width */
 ::-webkit-scrollbar {
